--- a/html6.css
+++ b/html6.css
@@ -1,26 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap');
 body{
-    grid-template-areas: 
-    "header";
     font-family: 'Oswald';
 }
-#header{
-    grid-area: header;
-    background-image: url("1.jpg");
+.header{
     width: 100%;
-    height: 800px;
-    text-align: center;
-    color: aliceblue;
+    height: 1100px;
     background-repeat: no-repeat;
-    font-size: 60px;
-    padding-top: 100px;
+    filter: brightness(60%);
+}
+.header1{
+    text-align: center;
+    color: white;
+    font-size: 100px;
+    font-weight: 900;
+    margin-top: -940px;
+    position: relative;
+}
+.header2{
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    font-weight: 200;
+    margin-top: 35px;
+    position: relative;
+    width: 800px;
+}
+.cont{
+    display: flex;
+    justify-content: center;
+}
+.header3{
+    margin-top: 160px;
+    width:280px;
+    height: 105px;
+    font-size: 40px;
+    background-color: white;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 .top{
-    margin: 15px 15px 15px 725px;
+    margin: 450px 15px 15px 0px;
     font-size: 45px;
 }
 .text1{
-    margin: -330px 0px 0px 900px;
+    margin: -450px 0px 0px 900px;
     text-align: space-around;
     font-style: bold;
     font-size: 22px;
@@ -64,13 +90,13 @@ body{
 .text{
     text-align: center;
     color: rgb(93, 93, 93);
-    margin: 0px 0px 60px 700px;
+    margin: 0px 0px 60px 0px;
     font-size: 20px;
     max-width: 450px;
 }
 .box1{
     width: 25%;
-    margin: 150px 0px 0px 0px;
+    margin: 200px 0px 0px 0px;
     background-color: rgb(34, 34, 34);
     height: 270px;
     text-align: center;
@@ -118,32 +144,241 @@ body{
     margin-top: 30px;
 }
 .top1{
-    margin: 80px 0px 20px 825px;;
+    margin: 80px 0px 20px 0px;;
     font-size: 45px;
 }
 .elem1{
+    flex-direction: row;
+}
+.chair{
+    width:100%;
+    height:700px;
+    margin-top: 30px;
+}
+.circle{
+    border-radius: 40px 40px 40px 40px;
+    height:80px;
+    width:80px;
+    margin-top: -600px;
+    margin-left: 30%;
+    margin-bottom: 700px;
+}
+.quote{
+    font-size: 45px;
+    text-align: center;
+    margin: -650px 0 0 0;
+    width:1000px;
+}
+.name{
+    margin: 20px 0px 0px -500px;
+    font-size: 20px;
+    position: relative;
+}
+.back{
+    height:850px;
+    margin-top:-240px;
+    width:100%;
+    background-color: rgb(246, 246, 246);
+}
+.top2{
+    padding-top: 100px;
+    font-size: 45px;
+}
+.add{
+    margin-top: 10px;
+}
+.square1{
+    margin-left: 16.5%;
+    width:600px;
+    height: 350px;
+    background-color: white;
+}
+.square2{
+    margin: -350px 16.5% 0px 917px;
+    width:600px;
+    height: 350px;
+    background-color: white;
+}
+.pad{
+    padding-left: 78px;
+    width: 1px;
+}
+.work{
+    padding: 55px 0px 0px 85px;
+    font-weight: 900;
+    letter-spacing: 1px;
+    font-size: 25px;
+}
+.work:hover{
+    color: rgb(203, 147, 85);
+    transition: 0.5s;
+}
+.text7{
+    margin: -28px 0px 0px 105px;
+    font-size: 17px;
+}
+.text8{
+    padding: 20px 0px 0px 85px;
+    color: rgb(93, 93, 93);
+    width: 450px;
+    font-size: 17px;
+}
+.top3{
+    margin-top: 200px;
+    padding-top: 100px;
+    font-size: 45px;
+}
+.photo1{
+    width:19.80%;
+    height:500px;
+}
+.photo1:hover{
+    background-color: black;
+    filter: brightness(40%);
+    font-size: 20px;
+    text-align: center; 
+}
+.footer{
+    width:100%;
+    height:450px;
+    background-color: rgb(34, 34, 34);
+    margin-top: 20px;
+}
+.cont1{
+    display: flex;
+    justify-content: center;
+}
+.footer1{
+    font-size: 25px;
+    color: white;
+    font-weight: 600;
+    margin: 100px 70px 0px 70px;
+}
+.footer2{
+    font-weight: 600;
+    font-size: 18px;
+    color: white;
+    font-weight: 200;
+    margin: 10px 70px 0px 70px;
+}
+.footer3{
+    margin: -10px 70px 0px 70px;
+}
+.footer4{
+    font-weight: 600;
+    font-size: 18px;
+    color: rgb(143, 143, 143);
+    font-weight: 200;
+    margin: -5px 70px 0px -65px;
+}
+.image{
+    width: 45%;
+    height: 500px;
+}
+.line{
+    width:70px;
+    height:3px;
+    background-color:rgb(203, 147, 85) ;
+    margin: 10px 0 0 70px;
+}
+.line:hover{
+    width: 100px;
+    transition-duration: 0.5s;
+}
+.line1{
+    width:150px;
+    height:4px;
+    background-color:rgb(203, 147, 85) ;
+    margin-top: -40px;
+}
+.line1:hover{
+    width: 200px;
+    transition-duration: 0.5s;
+}
+.text10{
+    opacity: 0;
+    width: 270px;
+    height:368px;
+    margin-top: -368px;
+    color: w;
+}
+.text10:hover{
+    opacity: 1;
+    background-color: black;
+    filter: brightness(40%);
+}
+
+group1{
     flex-direction: column;
     display: inline-block;
 }
 .bag{
-    margin:0px 7px 7px 570px;
+    justify-content: center;
     width: 270px;
-    height:370px;
+    height:368px;
+    margin: 0 2px 0 2px;
+}
+.bag:hover{
+    background-color: black;
+    filter: brightness(40%);
+    font-size: 20px;
+    text-align: center; 
 }
 .computer{
-    margin:0px 7px 7px 7px;
-    margin-top: -150px;
+    justify-content: center;
     width: 270px;
-    height:220px;
+    height:218px;
+    margin: 0 2px 0 2px; 
 }
-.chair{
-    width:1900px;
-    height:700px;
+.computer:hover{
+    background-color: black;
+    filter: brightness(40%);
 }
-.circle{
-    border-radius: 30px 30px 30px 30px;
-    height:60px;
-    width:60px;
-    margin: -700px 0px 0px 700px;
+
+
+
+.hover-effect-scale {
+    margin:0px 10px 0px -40px;
+    width: 270px;
+    text-align: center;
+}
+.hover-effect-scale li {
     position: relative;
+    display: inline-block;
+    overflow: hidden;
+}
+/* Заголовок, текст и ссылка */
+.hover-effect-scale li h3{
+    font-size: 35px;
+    color: #fff;
+}
+
+.hover-effect-scale li p{
+    font-size: 18px;
+    color: #d0d0d0;
+}
+.hover-effect-scale li a {
+    color: #fff;
+    color: rgb(203, 147, 85);
+    transition: all 0.4s ease-in-out;
+}
+/* Выезжающий блок с текстом */ 
+.hover-effect-scale li > div {
+    width: 270px;
+    height: 368px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.hover-effect-scale li:hover > div {
+    top: 0;
+}
+.hover-effect-scale li div {
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Фон блока при наведении */
+    transition: all 0.2s ease-in-out;
+}
+.hover-effect-scale li:hover div {
+    opacity: 1;
 }
